# 1F1B_overlap_monitor

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_zh.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
benchmarks/: README.md  benchmark_runtime.py
docs/: README.md  api.md  architecture.md  async_measurement_design.md  cupti_measurement.md  ecosystem.md  industrial_reusable_module_design.md  integration.md  measurement.md  similar_projects_report.md  validation.md  validation_4090_20260713.md  validation_report.md
examples/: README.md  python_api.py
native/cupti_collector/: CMakeLists.txt  README.md
native/cupti_collector/include/: overlap_cupti.h
native/cupti_collector/src/: collector.cpp
overlap_monitor/: __init__.py  api.py  cli.py
overlap_monitor/adapters/: __init__.py  cupti_runtime.py  megatron.py
overlap_monitor/analyzer/: __init__.py  classifier.py  critical_path.py  overlap.py
overlap_monitor/benchmarks/: benchmark_runtime.py  cupti_gpu_smoke.py
overlap_monitor/core/: __init__.py  events.py  intervals.py  io.py  metrics.py  session.py  validation.py
overlap_monitor/examples/: critical_path_events.jsonl  cupti_activity.jsonl
overlap_monitor/profiler/: __init__.py  cupti.py  normalizer.py  pytorch_profiler.py  work_handle.py
overlap_monitor/schemas/: event-v1.schema.json  summary-v1.schema.json
overlap_monitor/te_adapter/: __init__.py  te_adapter.py
overlap_monitor/tests/: test_cli.py  test_critical_path.py  test_event_parser.py  test_megatron_adapter.py  test_overlap_algorithm.py  test_session.py  test_te_adapter.py  test_validation.py  test_visualization.py
overlap_monitor/visualization/: __init__.py  ascii_timeline.py  chrome_trace.py  summary_table.py
overlap_monitor_v2/: __init__.py  cli.py
overlap_monitor_v2/adapters/: __init__.py  megatron.py
overlap_monitor_v2/analyzer/: __init__.py  classifier.py  critical_path.py  overlap.py
overlap_monitor_v2/benchmarks/: benchmark_runtime.py
overlap_monitor_v2/configs/: default.json
overlap_monitor_v2/core/: __init__.py  events.py  io.py  metrics.py  session.py  validation.py
overlap_monitor_v2/profiler/: __init__.py  cuda_event.py  normalizer.py  pytorch_profiler.py  work_handle.py
overlap_monitor_v2/te_adapter/: __init__.py  te_adapter.py
overlap_monitor_v2/tests/: __init__.py  test_cli.py  test_critical_path.py  test_event_parser.py  test_megatron_adapter.py  test_overlap_algorithm.py  test_session.py  test_te_adapter.py  test_validation.py  test_visualization.py
overlap_monitor_v2/visualization/: __init__.py  ascii_timeline.py  chrome_trace.py  summary_table.py
references/: README.md  file_list.md  implementation_map.md  metric_design.md  references.bib  references.md
tests/: __init__.py  test_api.py  test_cli.py  test_critical_path.py  test_cupti.py  test_event_parser.py  test_megatron_adapter.py  test_overlap_algorithm.py  test_schema.py  test_session.py  test_te_adapter.py  test_validation.py  test_visualization.py
