[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "overlap-monitor"
version = "0.3.0"
description = "Decoupled 1F1B communication-computation overlap monitoring framework."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Research Engineering" }
]
license = "MIT"
keywords = [
  "megatron",
  "moe",
  "1f1b",
  "nccl",
  "profiling",
  "overlap",
  "critical-path"
]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Distributed Computing",
  "Topic :: Scientific/Engineering"
]

[project.optional-dependencies]
gpu = [
  "torch",
  "transformer-engine==2.7.0"
]
dev = [
  "build>=1.2",
  "jsonschema>=4.23,<5",
  "ruff>=0.12,<1"
]

[project.scripts]
overlap-monitor = "overlap_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/sp2022maomao/1F1B_overlap_monitor"
Repository = "https://github.com/sp2022maomao/1F1B_overlap_monitor"
Issues = "https://github.com/sp2022maomao/1F1B_overlap_monitor/issues"
Documentation = "https://github.com/sp2022maomao/1F1B_overlap_monitor/tree/main/docs"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["overlap_monitor*"]

[tool.setuptools.package-data]
overlap_monitor = ["py.typed", "schemas/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
